Revise LICENSE.html for better formatting
Updated formatting and structure of the license document for improved readability and clarity.

--- a/LICENSE.html
+++ b/LICENSE.html
@@ -1,110 +1,112 @@
-☠️ DEVCONNECT — PROPRIETARY & RESTRICTED LICENSE
+# ☠️ DEVCONNECT — PROPRIETARY & RESTRICTED LICENSE
 
-Version 1.0 — December 2025
-© 2025 Hamza Nasar. ALL RIGHTS RESERVED.
+**Version 1.0 — December 2025**  
+**© 2025 Hamza Nasar. ALL RIGHTS RESERVED.**
 
-⚠️ LEGAL WARNING
+---
 
-This software is STRICTLY PROPRIETARY.
-Any unauthorized access, copying, usage, modification, or distribution of this project is considered INTELLECTUAL PROPERTY THEFT and may result in SERIOUS LEGAL CONSEQUENCES.
+## ⚠️ LEGAL WARNING
 
-🔒 1. Ownership
+> [!CAUTION]
+> This software is **STRICTLY PROPRIETARY**.
+> Any unauthorized access, copying, usage, modification, or distribution of this project is considered **INTELLECTUAL PROPERTY THEFT** and may result in **SERIOUS LEGAL CONSEQUENCES**.
 
-DevConnect, including all source code, documentation, designs, UI/UX, assets, architecture, logic, and associated intellectual property (collectively referred to as “DevConnect”), is the sole and exclusive property of Hamza Nasar.
+---
+
+## 🔒 1. Ownership
+
+**DevConnect**, including all source code, documentation, designs, UI/UX, assets, architecture, logic, and associated intellectual property (collectively referred to as “DevConnect”), is the sole and exclusive property of **Hamza Nasar**.
 
 No rights, ownership, or licenses are transferred under any circumstances unless explicitly granted in writing by the copyright holder.
 
-🛡️ 2. License Grant (EXTREMELY LIMITED)
+---
 
-DevConnect is provided ONLY for the following purposes:
+## 🛡️ 2. License Grant (EXTREMELY LIMITED)
 
-Viewing
+DevConnect is provided **ONLY** for the following purposes:
+- **Viewing**
+- **Evaluation**
+- **Personal portfolio review**
 
-Evaluation
+> [!IMPORTANT]
+> **NO RIGHTS** are granted for:
+> - Commercial use
+> - Redistribution
+> - Modification
+> - Derivative works
+> - Production deployment
+>
+> Any usage beyond this scope is **STRICTLY FORBIDDEN**.
 
-Personal portfolio review
+---
 
-🚫 NO RIGHTS are granted for:
+## 🚫 3. Strictly Prohibited Uses
 
-Commercial use
+Without prior written consent from Hamza Nasar, the following actions are **ABSOLUTELY PROHIBITED**:
 
-Redistribution
-
-Modification
-
-Derivative works
-
-Production deployment
-
-Any usage beyond this scope is STRICTLY FORBIDDEN.
-
-🚫 3. Strictly Prohibited Uses
-
-Without prior written consent from Hamza Nasar, the following actions are ABSOLUTELY PROHIBITED:
-
-Copying, reproducing, cloning, or duplicating DevConnect in whole or in part
-
-Using DevConnect as a template, reference, base, or inspiration for other projects
-
-Creating derivative, competing, or similar products
-
-Distributing, sublicensing, selling, leasing, or sharing DevConnect or any of its components
-
-Deploying DevConnect in any live, commercial, or production environment
-
-Reverse‑engineering, decompiling, disassembling, or attempting to extract source code, architecture, or internal logic
+1. **Copying**, reproducing, cloning, or duplicating DevConnect in whole or in part.
+2. Using DevConnect as a **template, reference, base, or inspiration** for other projects.
+3. Creating **derivative, competing, or similar** products.
+4. **Distributing**, sublicensing, selling, leasing, or sharing DevConnect or any of its components.
+5. **Deploying** DevConnect in any live, commercial, or production environment.
+6. **Reverse‑engineering**, decompiling, disassembling, or attempting to extract source code, architecture, or internal logic.
 
 Any such act will be treated as a deliberate violation of intellectual property rights.
 
-🎓 4. Portfolio & Educational Review (LIMITED)
+---
 
-Students, developers, and reviewers may ONLY view or analyze DevConnect for learning or private portfolio review
+## 🎓 4. Portfolio & Educational Review (LIMITED)
 
-Any screenshots, code snippets, or architectural explanations must include clear and visible attribution to Hamza Nasar
+- Students, developers, and reviewers may **ONLY** view or analyze DevConnect for learning or private portfolio review.
+- Any screenshots, code snippets, or architectural explanations **MUST** include clear and visible attribution to **Hamza Nasar**.
+- Usage is limited strictly to non‑public, non‑commercial, and non‑derivative purposes.
 
-Usage is limited strictly to non‑public, non‑commercial, and non‑derivative purposes
+> [!WARNING]
+> Public reuse, teaching redistribution, or project replication is **NOT ALLOWED**.
 
-🚫 Public reuse, teaching redistribution, or project replication is NOT ALLOWED.
+---
 
-❌ 5. No Warranty / No Liability
+## ❌ 5. No Warranty / No Liability
 
-DevConnect is provided “AS IS”, without any warranties of any kind, whether express or implied, including but not limited to:
+DevConnect is provided **“AS IS”**, without any warranties of any kind, whether express or implied, including but not limited to:
+- Merchantability
+- Fitness for a particular purpose
+- Non‑infringement
 
-Merchantability
+The copyright holder shall **NOT** be held liable for any damages, losses, or claims arising from the use or inability to use this software.
 
-Fitness for a particular purpose
+---
 
-Non‑infringement
+## ⚖️ 6. Enforcement & Legal Action
 
-The copyright holder shall NOT be held liable for any damages, losses, or claims arising from the use or inability to use this software.
+Any violation of this license may result in **IMMEDIATE AND AGGRESSIVE LEGAL ACTION**, including but not limited to:
+- Civil lawsuits
+- Monetary damages
+- Permanent injunctive relief
 
-⚖️ 6. Enforcement & Legal Action
+The copyright holder reserves **ALL LEGAL RIGHTS** to enforce ownership and intellectual property claims to the maximum extent permitted by law.
 
-Any violation of this license may result in IMMEDIATE AND AGGRESSIVE LEGAL ACTION, including but not limited to:
+---
 
-Civil lawsuits
+## 🌍 7. Governing Law & Jurisdiction
 
-Monetary damages
+This license shall be governed by and construed in accordance with the laws of **Pakistan**, without regard to conflict‑of‑law principles.  
+All disputes shall fall under the exclusive jurisdiction of **Pakistani courts**.
 
-Permanent injunctive relief
+---
 
-The copyright holder reserves ALL LEGAL RIGHTS to enforce ownership and intellectual property claims to the maximum extent permitted by law.
-
-🌍 7. Governing Law & Jurisdiction
-
-This license shall be governed by and construed in accordance with the laws of Pakistan, without regard to conflict‑of‑law principles.
-All disputes shall fall under the exclusive jurisdiction of Pakistani courts.
-
-📬 8. Contact & Permission Requests
+## 📬 8. Contact & Permission Requests
 
 Any request for explicit written permission, licensing, or special authorization must be directed to:
 
-Hamza Nasar
-📧 Email: hamzanasar144@gmail.com
+**Hamza Nasar**  
+📧 **Email:** [hamzanasar144@gmail.com](mailto:hamzanasar144@gmail.com)  
+🌐 **Portfolio:** [https://hamza-dev-blond.vercel.app/](https://hamza-dev-blond.vercel.app/)
 
-🌐 Portfolio: https://hamza-dev-blond.vercel.app/
+---
 
-🔥 FINAL NOTICE
+## 🔥 FINAL NOTICE
 
-This project is NOT open‑source.
-If you are viewing this repository, you are NOT authorized to copy, reuse, or redistribute this code.
+> [!IMPORTANT]
+> **This project is NOT open‑source.**
+> If you are viewing this repository, you are **NOT** authorized to copy, reuse, or redistribute this code.
